@@ -1,5 +1,8 @@
 2005-07-06  Stephen Deasey  <sdeasey@users.sf.net>
 
+	* nsd/binder.c:
+	* nsd/driver.c: Localize Windows ifdefs as much as possible.
+
 	* nsd/connio.c:
 	* nsd/queue.c:
 	* nsd/return.c:
